--- a/src/Catty/App-Info.plist
+++ b/src/Catty/App-Info.plist
@@ -115,5 +115,11 @@
 			</dict>
 		</dict>
 	</array>
+	<key>FIREBASE_ANALYTICS_COLLECTION_DEACTIVATED</key>
+	<true/>
+	<key>FirebaseScreenReportingEnabled</key>
+	<false/>
+	<key>FirebaseCrashlyticsCollectionEnabled</key>
+	<false/>
 </dict>
 </plist>
