--- a/src/Catty/Settings.bundle/Root.plist
+++ b/src/Catty/Settings.bundle/Root.plist
@@ -30,7 +30,7 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>0.6.11</string>
+			<string>$(MARKETING_VERSION)</string>
 			<key>Key</key>
 			<string>versionNumberSettings</string>
 			<key>Title</key>
