--- a/src/Catty/Supporting Files/Logger/LoggerProperties.plist
+++ b/src/Catty/Supporting Files/Logger/LoggerProperties.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>WhenBackgroundChangesScript</key>
+	<string>warn</string>
 	<key>Project</key>
 	<string>warn</string>
 	<key>GDataXMLElement(CustomExtensions)</key>
