CATTY-216 Move todo warnings from SwiftLint to Xcode

--- a/src/RunScripts/.swiftlint.yml
+++ b/src/RunScripts/.swiftlint.yml
@@ -118,7 +118,7 @@ whitelist_rules:
  - switch_case_alignment
  - switch_case_on_newline
  - syntactic_sugar
- - todo
+ #- todo
  #- trailing_closure
  - trailing_comma
  - trailing_newline
