--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -10,9 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: GitHub Action for SwiftLint (only files changed in the PR)
+      - name: GitHub Action for SwiftLint
         uses: norio-nomura/action-swiftlint@3.1.0
         with:
-          args: --config "src/RunScripts/.swiftlint.yml" --strict
-        env:
-          DIFF_BASE: ${{ github.base_ref }}
+          args: --path src --config RunScripts/.swiftlint.yml --strict
