--- a/src/Catty/Supporting Files/App-Info.plist
+++ b/src/Catty/Supporting Files/App-Info.plist
@@ -54,7 +54,7 @@
 	<key>CatrobatPlatformName</key>
 	<string>iOS</string>
 	<key>CatrobatProgramLicense</key>
-	<string>http://developer.catrobat.org/agpl_v3</string>
+	<string>https://developer.catrobat.org/agpl_v3</string>
 	<key>FIREBASE_ANALYTICS_COLLECTION_ENABLED</key>
 	<false/>
 	<key>FirebaseCrashlyticsCollectionEnabled</key>
