--- a/src/RunScripts/.swiftlint.yml
+++ b/src/RunScripts/.swiftlint.yml
@@ -156,6 +156,6 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
  - Carthage
  - Pods
  - Catty/Defines/LanguageTranslationDefinesSwift.swift
- - Catty UITests/Defines/LanguageTranslationDefinesUI.swift
+ - CattyUITests/Defines/LanguageTranslationDefinesUI.swift
  - RunScripts/license-validator.swift
  - RunScripts/precompile-tests.swift
