--- a/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (DEBUG).xcscheme
+++ b/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (DEBUG).xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:Catty.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "187E079F24E26CED00E652C4"
+               BuildableName = "Catty UISnapshots.xctest"
+               BlueprintName = "Catty UISnapshots"
+               ReferencedContainer = "container:Catty.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -81,16 +95,6 @@
                BuildableName = "BluetoothHelperTests.xctest"
                BlueprintName = "BluetoothHelperTests"
                ReferencedContainer = "container:Catty/BluetoothHelper/BluetoothHelper.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "187E079F24E26CED00E652C4"
-               BuildableName = "Catty UISnapshots.xctest"
-               BlueprintName = "Catty UISnapshots"
-               ReferencedContainer = "container:Catty.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
