--- a/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (RELEASE).xcscheme
+++ b/src/Catty.xcodeproj/xcshareddata/xcschemes/Catty (RELEASE).xcscheme
@@ -48,6 +48,20 @@
                ReferencedContainer = "container:Catty.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "187E079F24E26CED00E652C4"
+               BuildableName = "Catty UISnapshots.xctest"
+               BlueprintName = "Catty UISnapshots"
+               ReferencedContainer = "container:Catty.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -66,16 +80,6 @@
          </BuildableReference>
       </MacroExpansion>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "187E079F24E26CED00E652C4"
-               BuildableName = "Catty UISnapshots.xctest"
-               BlueprintName = "Catty UISnapshots"
-               ReferencedContainer = "container:Catty.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
