--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: GitHub Action for SwiftLint
-        uses: norio-nomura/action-swiftlint@3.1.0
+        uses: norio-nomura/action-swiftlint@3.2.0
         with:
-          args: --path src --config RunScripts/.swiftlint.yml --strict
+          args: --config .swiftlint.yml --strict
+        env:
+          WORKING_DIRECTORY: src
