--- a/src/CattyTests/Store/Download/Fixtures/StoreProjectDownloader.fetchFeaturedProjects.fail.parse.json
+++ b/src/CattyTests/Store/Download/Fixtures/StoreProjectDownloader.fetchFeaturedProjects.fail.parse.json
@@ -1,47 +1,33 @@
 {
+  "name" : "StoreProjectDownloader.fetchFeaturedProjects.fail.parse",
   "interactions" : [
     {
-      "response" : {
-        "status" : 200,
-        "headers" : {
-          "Content-Type" : "application\/json",
-          "Set-Cookie" : "PHPSESSID=2kvnvd0dev50gkjv75ivhl6g35; path=\/",
-          "Expires" : "-1",
-          "Pragma" : "no-cache",
-          "Strict-Transport-Security" : "max-age=15768000",
-          "Server" : "nginx",
-          "Date" : "Thu, 23 Aug 2018 08:22:21 GMT",
-          "Cache-Control" : "private, must-revalidate"
-        },
-        "body" : {
-          "CatrobatInformation" : {
-            "BaseUrl" : "https:\/\/web-test.catrob.at\/",
-            "TotalProjects" : "2"
-          },
-          "CatrobatProjects" : [
-            {
-              "FeaturedImage" : "resources\/featured\/featured_28.jpeg",
-              "ProjectName" : "Galaxy War",
-              "ProjectId" : "719",
-              "Author" : "DavidR"
-            },
-            {
-              "FeaturedImage" : "resources\/featured\/featured_29.jpeg",
-              "ProjectName" : "Whack A Mole",
-              "ProjectId" : "821",
-              "Author" : "VesnaK"
-            }
-          ],
-          "preHeaderMessages" : ""
-        },
-        "url" : "https:\/\/web-test.catrob.at\/pocketcode\/api\/projects\/ios-featured.json?limit=10"
-      },
-      "recorded_at" : 1535012541.680099,
       "request" : {
         "method" : "GET",
-        "url" : "https:\/\/web-test.catrob.at\/pocketcode\/api\/projects\/ios-featured.json?limit=10"
+        "url" : "https:\/\/web-test.catrob.at\/api\/projects\/featured?max_version=0.993&limit=20&offset=0"
+      },
+      "recorded_at" : 1616508147.6064649,
+      "response" : {
+        "url" : "https:\/\/web-test.catrob.at\/api\/projects\/featured?max_version=0.993&limit=20&offset=0",
+        "headers" : {
+          "Content-Type" : "application\/json",
+          "Strict-Transport-Security" : "max-age=15768000",
+          "x-response-hash" : "7dda09e1c9de3e3e6d68b80632a77743",
+          "Date" : "Tue, 23 Mar 2021 14:02:27 GMT",
+          "Cache-Control" : "private, must-revalidate",
+          "x-openapi-message" : "OK",
+          "Expires" : "-1",
+          "Content-Encoding" : "gzip",
+          "Pragma" : "no-cache",
+          "Server" : "nginx"
+        },
+        "status" : 200,
+        "body" : [
+          {
+          
+          }
+        ]
       }
     }
-  ],
-  "name" : "StoreProjectDownloader.fetchFeaturedProjects.fail.parse"
+  ]
 }
