CATTY-655 Refactor synchronize-localizations from python to swift

--- a/src/.swiftlint.yml
+++ b/src/.swiftlint.yml
@@ -161,3 +161,4 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
  - CattyUISnapshots/Supporting Files/SnapshotHelper.swift
  - RunScripts/license-validator.swift
  - RunScripts/precompile-tests.swift
+ - RunScripts/synchronize-localization.swift
