Try bultin scan

--- a/src/fastlane/.env.default
+++ b/src/fastlane/.env.default
@@ -1,7 +1,8 @@
-FASTLANE_SKIP_UPDATE_CHECK = "1"
-
 CATTY_APP_IDENTIFIER = "org.catrobat.pocketcode"
 CATTY_APPLE_ID = ""
+
+FIREBASE_API_KEY = ""
+FIREBASE_GOOGLE_APP_ID = ""
 
 BROWSERSTACK_USERNAME = ""
 BROWSERSTACK_ACCESS_KEY = ""
