CATTY-674 Implement object detection reporter functions

--- a/src/Catty/Settings.bundle/Acknowledgements.plist
+++ b/src/Catty/Settings.bundle/Acknowledgements.plist
@@ -150,6 +150,12 @@
                 <key>FooterText</key>
                 <string>Catty/Resources/Licenses/YKImageCropperView</string>
             </dict>
+            <dict>
+                <key>Type</key>
+                <string>PSGroupSpecifier</string>
+                <key>FooterText</key>
+                <string>Catty/Resources/Licenses/YOLOv3Tiny</string>
+            </dict>
         </array>
 </dict>
 </plist>
