--- a/src/.swiftlint.auto.yml
+++ b/src/.swiftlint.auto.yml
@@ -1,9 +1,12 @@
-whitelist_rules: 
+only_rules: 
  - trailing_whitespace
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
  - Catty/Defines/LanguageTranslationDefinesSwift.swift
  - CattyUITests/Defines/LanguageTranslationDefinesUI.swift
+ - CattyUISnapshots/Defines/LanguageTranslationDefinesUI.swift
+ - CattyUISnapshots/Supporting Files/SnapshotHelper.swift
  - RunScripts/license-validator.swift
  - RunScripts/precompile-tests.swift
+ - RunScripts/synchronize-localization.swift
  
