--- a/src/Catty/Supporting Files/App-Info.plist
+++ b/src/Catty/Supporting Files/App-Info.plist
@@ -79,6 +79,8 @@
 	<string>Record your own sounds or use the microphone for screen recording.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Import pictures from your Photo Library to use as Look or Background.</string>
+	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
+	<true/>
 	<key>UIFileSharingEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
