--- a/src/.swiftlint.yml
+++ b/src/.swiftlint.yml
@@ -3,11 +3,13 @@ only_rules:
  # swiftlint rules
  
  #- accessibility_label_for_image
+ #- accessibility_trait_for_button
  #- anonymous_argument_in_multiline_closure
- - anyobject_protocol
+ #- anyobject_protocol
  #- array_init
  #- attributes
  #- balanced_xctest_lifecycle
+ #- blanket_disable_command
  - block_based_kvo
  #- capture_variable
  - class_delegate_protocol
@@ -33,6 +35,7 @@ only_rules:
  - custom_rules
  #- cyclomatic_complexity
  #- deployment_target
+ #- direct_return
  - discarded_notification_center_observer
  #- discouraged_assert
  - discouraged_direct_init
@@ -40,6 +43,7 @@ only_rules:
  - discouraged_object_literal
  - discouraged_optional_boolean
  #- discouraged_optional_collection
+ #- duplicate_conditions
  #- duplicate_enum_cases
  #- duplicate_imports
  #- duplicated_key_in_dictionary_literal
@@ -86,6 +90,7 @@ only_rules:
  #- inclusive_language
  #- indentation_width
  #- inert_defer
+ #- invalid_swiftlint_command
  - is_disjoint
  - joined_default_parameter
  #- large_tuple
@@ -102,6 +107,7 @@ only_rules:
  - let_var_whitespace
  - line_length
  - literal_expression_end_indentation
+ #- local_doc_comment
  #- lower_acl_than_parent
  - mark
  #- missing_docs
@@ -118,8 +124,11 @@ only_rules:
  #- no_extension_access_modifier
  - no_fallthrough_only
  #- no_grouping_extension
+ #- no_magic_numbers
  #- no_space_in_method_call
+ #- non_overridable_class_declaration
  - notification_center_detachment
+ #- ns_number_init_as_function_reference
  #- nslocalizedstring_key
  #- nslocalizedstring_require_bundle
  #- nsobject_prefer_isequal
@@ -133,6 +142,7 @@ only_rules:
  #- overridden_super_call
  #- override_in_extension
  #- pattern_matching_keywords
+ #- period_spacing
  #- prefer_nimble
  #- prefer_self_in_static_references
  #- prefer_self_type_over_type_of_self
@@ -142,6 +152,7 @@ only_rules:
  - private_outlet
  #- private_over_fileprivate
  #- private_subject
+ #- private_swiftui_state
  - private_unit_test
  #- prohibited_interface_builder
  - prohibited_super_call
@@ -156,6 +167,7 @@ only_rules:
  - redundant_nil_coalescing
  #- redundant_objc_attribute
  - redundant_optional_initialization
+ #- redundant_self_in_closure
  - redundant_set_access_control
  - redundant_string_enum_value
  - redundant_type_annotation
@@ -167,7 +179,9 @@ only_rules:
  #- self_binding
  #- self_in_property_initialization
  - shorthand_operator
+ #- shorthand_optional_binding
  #- single_test_class
+ #- sorted_enum_cases
  - sorted_first_last
  - sorted_imports
  - statement_position
@@ -175,6 +189,7 @@ only_rules:
  #- strict_fileprivate
  #- strong_iboutlet
  - superfluous_disable_command
+ #- superfluous_else
  - switch_case_alignment
  - switch_case_on_newline
  - syntactic_sugar
@@ -192,8 +207,11 @@ only_rules:
  #- typesafe_array_init
  #- unavailable_condition
  #- unavailable_function
+ #- unhandled_throwing_task
  - unneeded_break_in_switch
+ #- unneeded_override
  - unneeded_parentheses_in_closure_argument
+ #- unneeded_synthesized_initializer
  #- unowned_variable_capture
  - untyped_error_in_catch
  #- unused_capture_list
